# adict

./: adict.cabal  adicts.cabal
Data/: Adict.hs  DAWG.hs  RadixTree.hs  Trie.hs
Data/Adict/: Base.hs  Benchmark.hs  Brute.hs  Check.hs  CostOrd.hs  CostVect.hs  Dist.hs  Extended.hs  Fast.hs  Graph.hs  ShortestPath.hs  Slow.hs
Data/DAWG/: Adict.hs  Array.hs  Class.hs  Node.hs  Trie.hs
Data/Graph/: ShortestPath.hs  ShortestPath2.hs
Data/Map/: Combine.hs
Data/Trie/: ArrayTrie.hs  Class.hs  DAWG.hs  DiskTrie.hs  Generic.hs  MapTrie.hs  Trie.hs
NLP/: Adict.hs
NLP/Adict/: Basic.hs  Benchmark.hs  Brute.hs  Core.hs  CostDiv.hs  CostVect.hs  DAWG.hs  Dist.hs  Graph.hs  Nearest.hs  ShortestPath.hs  Trie.hs
NLP/Adict/DAWG/: Array.hs  Class.hs  Internal.hs  Node.hs
NLP/Adict/Trie/: Class.hs  Serialize.hs
NLP/Adicts/: Brute.hs  Core.hs  CostOrd.hs  DAWG.hs  Dist.hs  Trie.hs
NLP/Adicts/DAWG/: Node.hs
NLP/Adicts/Trie/: DAWG.hs
NLP/Graph/: ShortestPath.hs
src/NLP/: Adict.hs
src/NLP/Adict/: Basic.hs  Brute.hs  Core.hs  CostDiv.hs  Graph.hs  Nearest.hs  Node.hs  Trie.hs
src/NLP/Adict/Trie/: Internal.hs
tests/: Properties.hs
util/: MkPoliHist.hs  MkPoliNe.hs  Poli2Trie.hs  Test.hs
