Name:               adict
Version:            0.0.2
Synopsis:           Approximate dictionary searching
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.Trie.Trie
		    Data.Trie.Class
		    Data.DAWG.Trie
		    Data.DAWG.Class
		    Data.DAWG.Node
		    Data.DAWG.Array
		    Data.Graph.ShortestPath
		    Data.Adict
		    Data.Adict.Base
		    Data.Adict.Dist
		    Data.Adict.CostVect
		    Data.Adict.CostOrd
		    Data.Adict.Brute
		    Data.Adict.Slow
		    Data.Adict.Fast
		    Data.Adict.ShortestPath
		    Data.Adict.Check
Build-Depends:      base
                  , containers
		  , vector
		  , array
		  , text
		  , binary
		  , vector-binary
		  , QuickCheck
		  , mtl
		  , pqueue
